force-app/main/default/objects/Campaign/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <label>Actual Cost</label>
    <summarizedField>Event_Allocation__c.Cost__c</summarizedField>
    <summaryForeignKey>Event_Allocation__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>