force-app/main/default/objects/Campaign/fields/Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue__c</fullName>
    <label>Actual Revenue</label>
    <summarizedField>Event_Allocation__c.Actual_Revenue__c</summarizedField>
    <summaryForeignKey>Event_Allocation__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>