force-app/main/default/objects/Campaign/fields/Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Cost__c</fullName>
    <label>Budgeted Cost</label>
    <summarizedField>Event_Allocation__c.Budget__c</summarizedField>
    <summaryForeignKey>Event_Allocation__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>