force-app/main/default/objects/Campaign/fields/Campaign_Members_Seat_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Members_Seat_Reserved__c</fullName>
    <label>Campaign Members Seat Reserved</label>
    <summarizedField>CampaignMember.No_of_guests__c</summarizedField>
    <summaryFilterItems>
        <field>CampaignMember.RSVP_Status__c</field>
        <operation>notEqual</operation>
        <value>Declined,, Waitlist</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>