force-app/main/default/objects/Campaign/fields/Count_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Count_Campaign_Members__c</fullName>
    <label>Count Campaign Members</label>
    <summaryFilterItems>
        <field>CampaignMember.RSVP_Status__c</field>
        <operation>equals</operation>
        <value>Attending, Tentative</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>