force-app/main/default/objects/Campaign/fields/DisplayOn__c.field-meta.xml
<CustomField>
    <fullName>DisplayOn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DisplayOn</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>