force-app/main/default/objects/Campaign/fields/EntryCriteria__c.field-meta.xml
<CustomField>
    <fullName>EntryCriteria__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Estimated Front Money per individual on this event</inlineHelpText>
    <label>Entry Criteria</label>
    <type>TextArea</type>
</CustomField>