force-app/main/default/objects/Campaign/fields/Estimated_Front_Money__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Front_Money__c</fullName>
    <inlineHelpText>Estimated Front Money per individual on this event</inlineHelpText>
    <label>Estimated Front Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>