force-app/main/default/objects/Campaign/fields/Event_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event End Date/Time (user timezone)</label>
    <type>DateTime</type>
</CustomField>