force-app/main/default/objects/Campaign/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <label>Event Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Star Sydney</fullName>
            </value>
            <value>
                <fullName>The Star Gold Coast</fullName>
            </value>
            <value>
                <fullName>The Star Brisbane (Treasury)</fullName>
            </value>
            <value>
                <fullName>Benneti Yacht</fullName>
            </value>
            <value>
                <fullName>The Star Sunseeker</fullName>
            </value>
            <value>
                <fullName>Star 888</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Natural 9 (transfer only)</fullName>
                <isActive>false</isActive>
                <label>Natural 9 (transfer only)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>