force-app/main/default/objects/Campaign/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <label>Expected Revenue</label>
    <summarizedField>Event_Allocation__c.Actual__c</summarizedField>
    <summaryForeignKey>Event_Allocation__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>