force-app/main/default/objects/Campaign/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Event hosts, each name separated by commas</inlineHelpText>
    <label>Event Main Host</label>
    <type>TextArea</type>
</CustomField>