force-app/main/default/objects/Campaign/fields/Host_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Host_Allocated__c</fullName>
    <label>Host Allocated</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>