force-app/main/default/objects/Campaign/fields/Host_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Host_Tickets__c</fullName>
    <label>Host Tickets</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>