force-app/main/default/objects/Campaign/fields/IRB_Event_Program__c.field-meta.xml
<CustomField>
    <fullName>IRB_Event_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IRB Event Program</label>
    <type>Checkbox</type>
</CustomField>