force-app/main/default/objects/Campaign/fields/Main_Event_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Main_Event_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Event Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordTypeId</field>
            <operation>equals</operation>
            <value>Main Event Campaign</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>