force-app/main/default/objects/Campaign/fields/Multiple_Events__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Events</label>
    <type>Checkbox</type>
</CustomField>