force-app/main/default/objects/Campaign/fields/No_of_Guests_allowed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Guests_allowed__c</fullName>
    <label>No. of Guests allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>