force-app/main/default/objects/Campaign/fields/No_of_hostRollUp__c.field-meta.xml
<CustomField>
    <fullName>No_of_hostRollUp__c</fullName>
    <inlineHelpText>Aggregate value from  Event Allocation No. of host</inlineHelpText>
    <label>No. of Hosts allocated</label>
    <summarizedField>Event_Allocation__c.No_of_host__c</summarizedField>
    <summaryForeignKey>Event_Allocation__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>