force-app/main/default/objects/Campaign/fields/No_of_Hosts_allocated__c.field-meta.xml
<CustomField>
    <fullName>No_of_Hosts_allocated__c</fullName>
    <label>No. of Hosts allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>