force-app/main/default/objects/Campaign/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>