force-app/main/default/objects/Campaign/fields/Offer_Value__c.field-meta.xml
<CustomField>
    <fullName>Offer_Value__c</fullName>
    <label>Offer Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>