force-app/main/default/objects/Campaign/fields/OfferDescription__c.field-meta.xml
<CustomField>
    <fullName>OfferDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OfferDescription</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>