force-app/main/default/objects/Campaign/fields/OfferHeadLine__c.field-meta.xml
<CustomField>
    <fullName>OfferHeadLine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OfferHeadLine</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>