force-app/main/default/objects/Campaign/fields/OfferSubLine__c.field-meta.xml
<CustomField>
    <fullName>OfferSubLine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OfferSubLine</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>