force-app/main/default/objects/Campaign/fields/OfferTypeDiscount__c.field-meta.xml
<CustomField>
    <fullName>OfferTypeDiscount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OfferTypeDiscount</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>