force-app/main/default/objects/Campaign/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>