force-app/main/default/objects/Campaign/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>