force-app/main/default/objects/Campaign/fields/Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available__c</fullName>
    <formula>Total_Seat_Capacity__c  -  Seats_Reserved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>