force-app/main/default/objects/Campaign/fields/Seats_Available_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available_Rollup__c</fullName>
    <label>Seats Available</label>
    <summarizedField>Event_Allocation__c.Seats_Available__c</summarizedField>
    <summaryForeignKey>Event_Allocation__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>