force-app/main/default/objects/Campaign/fields/Seats_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Seats_Reserved__c</fullName>
    <formula>Seats_Reserved_Count_RSVP_Attending__c  +  Seats_Reserved_RSVPAttending__c +  No_of_hostRollUp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>