force-app/main/default/objects/Campaign/fields/Seats_Reserved_Count_RSVP_Attending__c.field-meta.xml
<CustomField>
    <fullName>Seats_Reserved_Count_RSVP_Attending__c</fullName>
    <label>Seats Reserved (Count RSVP=Attending)</label>
    <summaryFilterItems>
        <field>CampaignMember.RSVP_Status__c</field>
        <operation>equals</operation>
        <value>Attending, Tentative</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>