force-app/main/default/objects/Campaign/fields/Seats_Reserved_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Seats_Reserved_RollUp__c</fullName>
    <label>Seats Reserved</label>
    <summarizedField>Event_Allocation__c.Seats_Reserved_All__c</summarizedField>
    <summaryForeignKey>Event_Allocation__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>