force-app/main/default/objects/Campaign/fields/Seats_Reserved_RSVPAttending__c.field-meta.xml
<CustomField>
    <fullName>Seats_Reserved_RSVPAttending__c</fullName>
    <label>Seats Reserved (RSVP=Attending)</label>
    <summarizedField>CampaignMember.No_of_guests__c</summarizedField>
    <summaryFilterItems>
        <field>CampaignMember.RSVP_Status__c</field>
        <operation>equals</operation>
        <value>Attending, Tentative</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>