force-app/main/default/objects/Campaign/fields/Static_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Static_Start_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Start Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>