force-app/main/default/objects/Campaign/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cruise 888</fullName>
            </value>
            <value>
                <fullName>The Star Yacht</fullName>
            </value>
            <value>
                <fullName>Benetti</fullName>
            </value>
            <value>
                <fullName>Rugby League (NRL)</fullName>
            </value>
            <value>
                <fullName>AFL</fullName>
            </value>
            <value>
                <fullName>SOCCER</fullName>
            </value>
            <value>
                <fullName>CRICKET</fullName>
            </value>
            <value>
                <fullName>BOXING</fullName>
            </value>
            <value>
                <fullName>Horse racing</fullName>
            </value>
            <value>
                <fullName>Car racing</fullName>
            </value>
            <value>
                <fullName>Boat racing</fullName>
            </value>
            <value>
                <fullName>Slots</fullName>
            </value>
            <value>
                <fullName>Baccarat</fullName>
            </value>
            <value>
                <fullName>Roulette</fullName>
            </value>
            <value>
                <fullName>BJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>