force-app/main/default/objects/Campaign/fields/TermsConditions__c.field-meta.xml
<CustomField>
    <fullName>TermsConditions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TermsConditions</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>