force-app/main/default/objects/Campaign/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Event Timezone (on location)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+07:00) Bangkok, Hanoi, Jakarta</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Beijing, Chongqing, Hong Kong, Urumqi</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Kuala Lumpur, Singapore</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Taipei</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Perth</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Seoul</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Osaka, Sapporo, Tokyo</fullName>
            </value>
            <value>
                <fullName>(GMT+09:30) Darwin</fullName>
            </value>
            <value>
                <fullName>(GMT+09:30) Adelaide</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Canberra, Melbourne, Sydney</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Brisbane, Gold Coast</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Hobart</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Magadan, Solomon Islands, New Caledonia</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Fiji, Kamchatka, Marshall Is.</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Auckland, Wellington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>