force-app/main/default/objects/Campaign/fields/Total_Seat_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Seat_Capacity__c</fullName>
    <label>Total Seat Allocation</label>
    <summarizedField>Event_Allocation__c.Capacity__c</summarizedField>
    <summaryForeignKey>Event_Allocation__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>