force-app/main/default/objects/Campaign/fields/TreatmentID__c.field-meta.xml
<CustomField>
    <fullName>TreatmentID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TreatmentID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>