force-app/main/default/objects/Campaign/fields/Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted__c</fullName>
    <formula>Waitlisted_COUNT_RSVP_Waitlisted__c +  Waitlisted_SUM_RSVP_Waitlisted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlisted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>