force-app/main/default/objects/Campaign/fields/Waitlisted_COUNT_RSVP_Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted_COUNT_RSVP_Waitlisted__c</fullName>
    <label>Waitlisted COUNT(RSVP=Waitlisted))</label>
    <summaryFilterItems>
        <field>CampaignMember.RSVP_Status__c</field>
        <operation>equals</operation>
        <value>Waitlist</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>