force-app/main/default/objects/Campaign/fields/Waitlisted_SUM_RSVP_Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted_SUM_RSVP_Waitlisted__c</fullName>
    <label>Waitlisted SUM(RSVP=Waitlisted))</label>
    <summarizedField>CampaignMember.No_of_guests__c</summarizedField>
    <summaryFilterItems>
        <field>CampaignMember.RSVP_Status__c</field>
        <operation>equals</operation>
        <value>Waitlist</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>