force-app/main/default/objects/Campaign/fields/X18_years_Event__c.field-meta.xml
<CustomField>
    <fullName>X18_years_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>18 years+ Event</label>
    <type>Checkbox</type>
</CustomField>