force-app/main/default/objects/Campaign/recordTypes/Main_Event_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Main_Event_Campaign</fullName>
    <active>true</active>
    <description>Record Type to hold TSEG Main event related information</description>
    <label>Main Event Campaign</label>
</RecordType>