force-app/main/default/objects/Campaign/recordTypes/Offer.recordType-meta.xml
<RecordType>
    <fullName>Offer</fullName>
    <active>true</active>
    <description>Record Type to hold TSEG Offer related information</description>
    <label>Offer</label>
</RecordType>