force-app/main/default/objects/Campaign/validationRules/Block_Enddate_before_Startdate.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Enddate_before_Startdate</fullName>
    <active>true</active>
    <description>End date cannot be before Start Date</description>
    <errorConditionFormula>/*
AND(
OR($RecordType.DeveloperName = &quot;Event&quot;, $RecordType.DeveloperName = &quot;Main_Event_Campaign&quot;),
OR( ISNEW(),ISCHANGED( Event_Start_Date_Time__c ),ISCHANGED( Event_End_Date_Time__c ) ),

Event_End_Date_Time__c &lt;  Event_Start_Date_Time__c,
$Permission.Skip_Validations_Permission = False
)
*/

IF($Permission.Skip_Validations_Permission, 
false,
AND(
OR($RecordType.DeveloperName = &quot;Event&quot;, $RecordType.DeveloperName = &quot;Main_Event_Campaign&quot;),
OR( ISNEW(),ISCHANGED( Event_Start_Date_Time__c ),ISCHANGED( Event_End_Date_Time__c ) ),

Event_End_Date_Time__c &lt;  Event_Start_Date_Time__c
)
)</errorConditionFormula>
    <errorMessage>End Date cannot be before Start Date.Enter valid values.</errorMessage>
</ValidationRule>