force-app/main/default/objects/Campaign/validationRules/Block_Past_Event_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Past_Event_Start_Date</fullName>
    <active>true</active>
    <description>Blocks user to enter a past Start Date</description>
    <errorConditionFormula>AND( OR($RecordType.DeveloperName  = &quot;Event&quot;, $RecordType.DeveloperName = &quot;Main_Event_Campaign&quot;),
AND(DATEVALUE(Event_Start_Date_Time__c) &lt;  TODAY(),OR(ISCHANGED(Event_Start_Date_Time__c),ISNEW())),
 $Permission.Skip_Validations_Permission = False)</errorConditionFormula>
    <errorDisplayField>Event_Start_Date_Time__c</errorDisplayField>
    <errorMessage>Please enter a future Start Date!</errorMessage>
</ValidationRule>