force-app/main/default/objects/Campaign/validationRules/Seat_Capacity_Cannot_be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Seat_Capacity_Cannot_be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>AND (RecordType.DeveloperName = &quot;Event&quot;,  Seats_Available_Rollup__c &lt;0,NOT( $Permission.Skip_Validations_Permission))</errorConditionFormula>
    <errorMessage>You have exceeded the Seat Capacity, Please choose a lesser value.</errorMessage>
</ValidationRule>