force-app/main/default/objects/Campaign/listViews/All_Offers.listView-meta.xml
<ListView>
    <fullName>All_Offers</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Campaign_Code__c</columns>
    <columns>Offer_Name__c</columns>
    <columns>Offer_Code__c</columns>
    <columns>Offer_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Offer</value>
    </filters>
    <label>All Offers</label>
</ListView>