force-app/main/default/objects/Campaign/listViews/All_Parent_Campaign_Events.listView-meta.xml
<ListView>
    <fullName>All_Parent_Campaign_Events</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Static_Start_Date_Time__c</columns>
    <columns>Static_End_Date_Time__c</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Main_Event_Campaign</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Proposed,Active,Cancelled,Closed</value>
    </filters>
    <label>All Main Event Campaigns</label>
</ListView>