force-app/main/default/objects/Campaign/listViews/AllActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaigns</fullName>
    <columns>Event_Start_Date_Time__c</columns>
    <columns>Event_End_Date_Time__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Static_Start_Date_Time__c</columns>
    <columns>Static_End_Date_Time__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>EntryCriteria__c</columns>
    <columns>Host__c</columns>
    <columns>Event_Location__c</columns>
    <columns>Others__c</columns>
    <columns>No_of_Guests_allowed__c</columns>
    <columns>Total_Seat_Capacity__c</columns>
    <columns>Seats_Available__c</columns>
    <columns>Seats_Reserved__c</columns>
    <columns>Waitlisted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Event,Campaign.Main_Event_Campaign</value>
    </filters>
    <label>All Active Campaigns</label>
</ListView>